--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,8 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
+  scroll-padding-top: 4rem; /* adjust to your navbar height */
 }
 
 /* Typography & theming */
